# aws-lightrag-doc-generate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AWS_DEPLOYMENT.md  CICD_SETUP.md  Dockerfile  Dockerfile.lambda  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml  example_usage.py  gradio_demo.py  lambda_handler.py  main.py  pyproject.toml  pytest.ini  requirements.txt  start.ps1  start.sh  start_server.ps1  test_form_submission.py  test_frontend.py  test_server.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  aws-deploy.yml  ci-cd.yml  ci.yml  codeql.yml  deploy-frontend.yml  deploy.yml  docker-build.yml  python-app.yml
app/: __init__.py  dependencies.py  main.py
app/core/: config.py  llm.py  logging.py  prompts.py
app/schemas/: __init__.py  documents.py  score.py
app/services/: cache.py  context7_service.py  critic_agent.py  document_generator.py  (+6 more)
aws/: README.md  ecs-task-definition.json
frontend/: next.config.ts  package-lock.json  package.json
prompts/: api_docs.prompty  architecture.prompty  critic_prompt.prompty  document_refine.prompty  entity_extraction.prompty  functional_spec.prompty  general.prompty  library_extract.prompty  planning_create.prompty  planning_refine.prompty  srs_template.prompty  wallet_report.prompty
scripts/: ensure_utf8.py
services/: __init__.py  credit_scoring_service.py  etherscan_service.py  offchain_data_generator.py
tests/: test_credit_scoring_service.py  test_scoring_engine.py
(+35 files in other folders)
